grabbed DOM elements

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <section class="images">
                 <img id="climate-image" />
                 <img id="architecture-image" />
-                <img id="famous-image" />
+                <img id="attractions-image" />
             </section>
             <section id="slogans"></section>
             <section class="dropdowns">
@@ -54,8 +54,8 @@
                     <option value="Baroque">Baroque</option>
                 </select>
                 <div>You changed the architecture <span id="architecture-count">0</span> times</div>
-                <select id="famous-dropdown">
-                    <option value="">Famous for</option>
+                <select id="attractions-dropdown">
+                    <option value="">Known for</option>
                     <option value="Burgers">The Burgers</option>
                     <option value="Coffee">The Coffee</option>
                     <option value="Pizza">The Pizza</option>
@@ -63,7 +63,8 @@
                     <option value="Landmarks">The Landmarks</option>
                 </select>
                 <div>
-                    You changed what the city is known for <span id="famous-count">0</span> times
+                    You changed what the city is known for
+                    <span id="attractions-count">0</span> times
                 </div>
             </section>
             <section>
