added event listeners to detect dropdown changes and display the associated jpgs

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <option value="Dry">Dry</option>
                     <option value="Temperate">Temperate</option>
                     <option value="Continental">Continental</option>
-                    <option value="Polar">Polar</option>
+                    <option value="Arctic">Arctic</option>
                 </select>
                 <div>You changed the climate <span id="climate-count">0</span> times</div>
                 <select id="architecture-dropdown">
@@ -56,11 +56,11 @@
                 <div>You changed the architecture <span id="architecture-count">0</span> times</div>
                 <select id="attractions-dropdown">
                     <option value="">Known for</option>
-                    <option value="Burgers">The Burgers</option>
+                    <option value="Burger">The Burgers</option>
                     <option value="Coffee">The Coffee</option>
                     <option value="Pizza">The Pizza</option>
-                    <option value="Skate-parks">The Skate-parks</option>
-                    <option value="Landmarks">The Landmarks</option>
+                    <option value="Skate-park">The Skate-parks</option>
+                    <option value="Landmark">The Landmarks</option>
                 </select>
                 <div>
                     You changed what the city is known for
